[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/battle/battle_manager.gd" id="1_battle_mgr"]
[ext_resource type="PackedScene" path="res://scenes/ui/HUD.tscn" id="2_hud"]
[ext_resource type="PackedScene" path="res://scenes/ui/EventPopup.tscn" id="3_event"]

[node name="TrenchBattle" type="Node2D"]

[node name="Background" type="ParallaxBackground" parent="."]

[node name="Terrain" type="Node2D" parent="."]

[node name="TrenchLine" type="StaticBody2D" parent="Terrain"]

[node name="TrenchCollision" type="CollisionShape2D" parent="Terrain/TrenchLine"]

[node name="Obstacles" type="Node2D" parent="Terrain"]

[node name="HumanForces" type="Node2D" parent="."]

[node name="GrakkForces" type="Node2D" parent="."]

[node name="BattleHUD" type="CanvasLayer" parent="."]
layer = 10

[node name="HUD" parent="BattleHUD" instance=ExtResource("2_hud")]

[node name="EventLayer" type="CanvasLayer" parent="."]
layer = 20

[node name="EventPopup" parent="EventLayer" instance=ExtResource("3_event")]

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("1_battle_mgr")
